Fixed navbar underline color with dark mode

--- a/src/Theme.scss
+++ b/src/Theme.scss
@@ -5,7 +5,7 @@
   --warning: #ddcd45;
   --danger: #ff8c86;
   --muted: #868e96;
-  --primary-light: white;
+  --primary-light: black;
   --secondary-light: #007ef8;
   --success-light: #1caa1c;
   --warning-light: #e1d35b;
